welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:6: error: not found: value poseBrosse
		setCouleurBrosse(c); poseBrosse(); leveBrosse()
                                     ^Array1:17: error: value PURPLE is not a member of object java.awt.Color
		brosse(Color.PURPLE)
                             ^